html 기본구조 생성

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- HTML 마크업 -->
+<!DOCTYPE html>
+<!-- HTML5의 표준 명령문으로, 반드시 선언해야함 -->
+<html lang="ko-KR">
+<head>
+  <meta charset="UTF-8" />
+  <!-- XHTML 표준 문법으로는 셀프 클로징 하는 것이 바람직함 -->
+  <!-- charset 설정은 무조건 title 보다 우선되어야 함-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- X의 선언은 비표준 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>웹카페</title>
+</head>
+<body>
+  
+</body>
+</html>
