--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- X의 선언은 비표준 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>웹카페</title>
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
   <header class="header">헤더</header>
