--- a/index.html
+++ b/index.html
@@ -139,17 +139,23 @@
     <div class="group group1">
       <section class="login">
         <h2 class="login-title">로그인</h2>
-        <from action="" class="login-form">
+        <from action="https://formspree.io/f/xdojqllg" class="login-form" method="GET">
           <fieldset>
             <legend>회원 로그인 폼</legend>
             <div class="user-email">
-              <label for="userEmail">아이디</label><input type="email" id="userEmail"/>
+              <label for="userEmail">아이디</label>
+              <input type="email" id="userEmail" placeholder="fe@euid.dev" required/>
             </div>
+            <div class="user-pw">
+              <label for="userPw">비밂번호</label>
+              <input type="password" id="userPw" placeholder="8자리 이상" required/>
+            </div>
+            <button type="submit" class="login-button">로그인</button>
           </fieldset>
         </from>
         <ul class="sign">
-          <li><a hredf="/">회원가입</a></li>
-          <li><a hredf="/">아이디/비밀번호 찾기</a></li>
+          <li><a href="/">회원가입</a></li>
+          <li><a href="/">아이디/비밀번호 찾기</a></li>
         </ul>
       </section>
     </div>
